typescript/checker/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:4:5
  |
4 | var b: void;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            47,
        ),
        hi: BytePos(
            49,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:6:5
  |
6 | var x1: boolean;
  |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            114,
        ),
        hi: BytePos(
            115,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:12:7
   |
12 | x1 *= E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            147,
        ),
        hi: BytePos(
            156,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:15:7
   |
15 | x1 *= undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            163,
        ),
        hi: BytePos(
            165,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:17:5
   |
17 | var x2: string;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            229,
        ),
        hi: BytePos(
            230,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:23:7
   |
23 | x2 *= E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            262,
        ),
        hi: BytePos(
            271,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:26:7
   |
26 | x2 *= undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            278,
        ),
        hi: BytePos(
            280,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:28:5
   |
28 | var x3: {};
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            340,
        ),
        hi: BytePos(
            341,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:34:7
   |
34 | x3 *= E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            373,
        ),
        hi: BytePos(
            382,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:37:7
   |
37 | x3 *= undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            389,
        ),
        hi: BytePos(
            391,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:39:5
   |
39 | var x4: void;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            453,
        ),
        hi: BytePos(
            454,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:45:7
   |
45 | x4 *= E.a;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            486,
        ),
        hi: BytePos(
            495,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:48:7
   |
48 | x4 *= undefined;
   |       ^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            502,
        ),
        hi: BytePos(
            504,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:50:5
   |
50 | var x5: number;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            559,
        ),
        hi: BytePos(
            561,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/assignmentOperator/compoundArithmeticAssignmentWithInvalidOperands.ts:56:5
   |
56 | var x6: E;
   |     ^^

